--- a/index.html
+++ b/index.html
@@ -813,29 +813,31 @@
         function goToWelcome() { screenTransition('profileScreen', 'welcomeScreen'); }
 
         function startGame() {
-            try {
-            alert('DEBUG: startGame appelee');
             var apiKey = document.getElementById('apiKeyInput').value.trim();
             if (!apiKey) { alert('Veuillez entrer une API Key valide'); return; }
             gameState.apiKey = apiKey;
             localStorage.setItem('geoguessr35ApiKey', apiKey);
+
             if (typeof google !== 'undefined' && google.maps) {
                 buildProfileCards();
                 screenTransition('welcomeScreen', 'profileScreen');
                 return;
             }
+
             window.gmapsCallback = function() {
                 buildProfileCards();
                 screenTransition('welcomeScreen', 'profileScreen');
             };
-            const script = document.createElement('script');
+
+            var script = document.createElement('script');
             script.src = 'https://maps.googleapis.com/maps/api/js?key=' + apiKey + '&v=weekly&callback=gmapsCallback';
             script.async = true;
-            script.onerror = function() { alert('Erreur: Impossible de charger Google Maps. Verifiez votre API Key et votre connexion.'); };
+            script.onerror = function() { alert('Erreur: Impossible de charger Google Maps API.'); };
             document.head.appendChild(script);
+
             setTimeout(function() {
                 if (typeof google === 'undefined' || !google.maps) {
-                    alert('Google Maps ne repond pas. Verifiez que Maps JavaScript API est activee dans votre console Google Cloud.');
+                    alert('Google Maps ne repond pas. Verifiez que Maps JavaScript API est active dans Google Cloud Console.');
                 }
             }, 10000);
         }
