--- a/index.html
+++ b/index.html
@@ -736,6 +736,7 @@
         }
 
         function getGameHistory() {
+            const data = localStorage.getItem('geoguessr35_games');
             return data ? JSON.parse(data) : [];
         }
 
@@ -791,6 +792,7 @@
         }
 
         function getH2H(id1, id2) {
+            const games = getGameHistory().filter(g => g.players.includes(id1) && g.players.includes(id2));
             let w1 = 0, w2 = 0, draws = 0;
             games.forEach(g => {
                 const s1 = g.scores[id1], s2 = g.scores[id2];
@@ -811,31 +813,27 @@
         function goToWelcome() { screenTransition('profileScreen', 'welcomeScreen'); }
 
         function startGame() {
-            var apiKey = document.getElementById('apiKeyInput').value.trim();
+            const apiKey = document.getElementById('apiKeyInput').value.trim();
             if (!apiKey) { alert('Veuillez entrer une API Key valide'); return; }
             gameState.apiKey = apiKey;
             localStorage.setItem('geoguessr35ApiKey', apiKey);
-
             if (typeof google !== 'undefined' && google.maps) {
                 buildProfileCards();
                 screenTransition('welcomeScreen', 'profileScreen');
                 return;
             }
-
             window.gmapsCallback = function() {
                 buildProfileCards();
                 screenTransition('welcomeScreen', 'profileScreen');
             };
-
-            var script = document.createElement('script');
+            const script = document.createElement('script');
             script.src = 'https://maps.googleapis.com/maps/api/js?key=' + apiKey + '&v=weekly&callback=gmapsCallback';
             script.async = true;
-            script.onerror = function() { alert('Erreur: Impossible de charger Google Maps API.'); };
+            script.onerror = function() { alert('Erreur: Impossible de charger Google Maps. Verifiez votre API Key et votre connexion.'); };
             document.head.appendChild(script);
-
             setTimeout(function() {
                 if (typeof google === 'undefined' || !google.maps) {
-                    alert('Google Maps ne repond pas. Verifiez que Maps JavaScript API est active dans Google Cloud Console.');
+                    alert('Google Maps ne repond pas. Verifiez que Maps JavaScript API est activee dans votre console Google Cloud.');
                 }
             }, 10000);
         }
@@ -845,6 +843,7 @@
         function buildProfileCards() {
             const grid = document.getElementById('profileGrid');
             grid.innerHTML = '';
+            const elo = getEloRatings();
             const sorted = Object.keys(PROFILES).sort((a, b) => elo[b] - elo[a]);
             const rankMap = {};
             sorted.forEach((id, i) => rankMap[id] = i + 1);
@@ -877,8 +876,11 @@
 
         function showLobby() {
             lobbySelected.clear();
+            const grid = document.getElementById('lobbyGrid');
             grid.innerHTML = '';
             Object.keys(PROFILES).forEach(id => {
+                const p = PROFILES[id];
+                const card = document.createElement('div');
                 card.className = 'lobby-card';
                 card.id = `lobby-${id}`;
                 card.innerHTML = `
@@ -896,6 +898,7 @@
         function toggleLobbyPlayer(id) {
             if (lobbySelected.has(id)) lobbySelected.delete(id);
             else lobbySelected.add(id);
+            const card = document.getElementById(`lobby-${id}`);
             card.classList.toggle('selected', lobbySelected.has(id));
             card.querySelector('.lobby-check').textContent = lobbySelected.has(id) ? '✓' : ' ';
             updateLobbyButton();
@@ -912,6 +915,7 @@
         // ===================== GAME START =====================
 
         function startPractice(profileId) {
+            const p = PROFILES[profileId];
             gameState.isPractice = true;
             gameState.isMulti = false;
             gameState.currentRound = 0;
@@ -929,6 +933,7 @@
             gameState.currentRound = 0;
             gameState.locations = [];
             gameState.players = [...lobbySelected].map(id => {
+                const p = PROFILES[id];
                 return { id, name: p.name, emoji: p.emoji, validated: false, score: 0, roundScores: [], guessLocation: null, marker: null, color: p.color };
             });
             document.getElementById('practiceLabel').innerHTML = '';
@@ -980,6 +985,7 @@
         let recentPanoIds = new Set();
 
         // Remember used pano IDs across games
+        let recentPanoIds = new Set();
 
         function loadLocations() {
             gameState.locations = [];
@@ -1091,6 +1097,7 @@
                 });
             } else {
                 gameState.players.forEach((player, idx) => {
+                    const initLat = 48.15 + idx * 0.008;
                     player.marker.setLatLng([initLat, -1.68]);
                     player.guessLocation = { lat: initLat, lng: -1.68 };
                     if (player.marker.dragging) player.marker.dragging.enable();
@@ -1168,6 +1175,7 @@
         function playerExploreValidate(idx) {
             if (gameState.phase !== 'explore') return;
             gameState.players[idx].validated = true;
+            const btn = document.getElementById(`btnExplore-${idx}`);
             btn.classList.add('validated');
             btn.textContent = '✓';
 
@@ -1182,6 +1190,7 @@
         function playerGuessValidate(idx) {
             if (gameState.phase !== 'guess') return;
             gameState.players[idx].validated = true;
+            const btn = document.getElementById(`btnGuess-${idx}`);
             btn.classList.add('validated');
             btn.textContent = '✓';
             if (gameState.players[idx].marker) gameState.players[idx].marker.dragging.disable();
@@ -1190,6 +1199,7 @@
 
         function resetButtons(phase) {
             gameState.players.forEach((p, i) => {
+                const btn = document.getElementById(`btn${phase}-${i}`);
                 if (btn) {
                     btn.classList.remove('validated');
                     btn.style.background = p.color;
@@ -1206,6 +1216,9 @@
 
         function haversineDistance(lat1, lng1, lat2, lng2) {
             const R = 6371;
+            const dLat = (lat2 - lat1) * Math.PI / 180;
+            const dLng = (lng2 - lng1) * Math.PI / 180;
+            const a = Math.sin(dLat / 2) ** 2 + Math.cos(lat1 * Math.PI / 180) * Math.cos(lat2 * Math.PI / 180) * Math.sin(dLng / 2) ** 2;
             return R * 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
         }
 
@@ -1213,6 +1226,7 @@
             const actualLoc = gameState.locations[gameState.currentLocationIndex];
             gameState.players.forEach(player => {
                 const g = player.guessLocation;
+                const dist = haversineDistance(g.lat, g.lng, actualLoc.lat, actualLoc.lng);
                 const pts = Math.round(5000 * Math.exp(-dist / 20));
                 player.roundScores.push(pts);
                 player.score += pts;
@@ -1235,6 +1249,7 @@
                 .then(r => { if (!r.ok) throw new Error(); return r.json(); });
 
             tryZoom(18).then(data => {
+                const a = data.address || {};
                 const road = a.road || a.pedestrian || a.footway || a.path || a.cycleway || '';
                 const detail = a.suburb || a.neighbourhood || a.quarter || a.hamlet || a.isolated_dwelling || a.farm || '';
                 const locality = a.village || a.town || a.city || a.municipality || '';
@@ -1305,10 +1320,12 @@
             resolveNominatim(actualLoc.lat, actualLoc.lng);
 
             // Build player cards
+            const sorted = [...gameState.players].sort((a, b) => b.lastPoints - a.lastPoints);
             const best = sorted[0].lastPoints;
             const row = document.getElementById('resultPlayersRow');
             row.innerHTML = '';
             sorted.forEach((p, i) => {
+                const card = document.createElement('div');
                 card.className = 'result-player-card' + (p.lastPoints === best ? ' winner' : '');
                 card.id = `rpc-${i}`;
                 const distText = p.lastDistance < 1 ? `${Math.round(p.lastDistance * 1000)} m` : `${p.lastDistance.toFixed(1)} km`;
@@ -1348,6 +1365,7 @@
             const playerMarkers = [];
             const playerLines = [];
             gameState.players.forEach(player => {
+                const g = player.guessLocation;
                 const emojiIcon = L.divIcon({
                     className: 'emoji-marker',
                     html: `<div style="display:flex;flex-direction:column;align-items:center;opacity:0;transition:opacity 0.4s ease;filter:drop-shadow(0 2px 6px rgba(0,0,0,0.4));" id="emark-${player.id}">
@@ -1393,6 +1411,8 @@
                     const lineDuration = 600;
                     const lineStart = performance.now();
                     const animateLines = (now) => {
+                        const progress = Math.min((now - lineStart) / lineDuration, 1);
+                        const eased = 1 - Math.pow(1 - progress, 2);
                         playerLines.forEach(({ line, lineOutline, target }) => {
                             const midLat = actualLoc.lat + (target[0] - actualLoc.lat) * eased;
                             const midLng = actualLoc.lng + (target[1] - actualLoc.lng) * eased;
@@ -1404,6 +1424,7 @@
                         else {
                             // Show player emoji markers
                             playerMarkers.forEach(({ id }) => {
+                                const el = document.getElementById(`emark-${id}`);
                                 if (el) el.style.opacity = '1';
                             });
                         }
@@ -1416,6 +1437,7 @@
                     overlayBottom.classList.add('visible');
                     sorted.forEach((p, i) => {
                         setTimeout(() => {
+                            const card = document.getElementById(`rpc-${i}`);
                             if (card) card.classList.add('visible');
                             const ptsEl = document.getElementById(`rpp-${i}`);
                             if (ptsEl) animatePoints(ptsEl, p.lastPoints, 800);
@@ -1439,10 +1461,12 @@
 
         function generateHighlights() {
             const highlights = [];
+            const players = gameState.players;
             const isMulti = players.length > 1;
 
             // Best round for each player
             players.forEach(p => {
+                const best = Math.max(...p.roundScores);
                 const bestIdx = p.roundScores.indexOf(best);
                 if (best >= 4500) {
                     highlights.push({ emoji: '🎯', text: `${p.emoji} ${p.name.split(' ')[0]} : ${best} pts en manche ${bestIdx + 1} — quasi parfait !` });
@@ -1494,6 +1518,7 @@
             });
 
             if (isMulti) {
+                const sorted = [...players].sort((a, b) => b.score - a.score);
 
                 // Close duel
                 for (let i = 0; i < sorted.length - 1; i++) {
@@ -1508,6 +1533,7 @@
                 players.forEach(p => {
                     let roundsWon = 0;
                     for (let i = 0; i < 10; i++) {
+                        const myScore = p.roundScores[i] || 0;
                         const othersMax = Math.max(...players.filter(x => x.id !== p.id).map(x => x.roundScores[i] || 0));
                         if (myScore > othersMax) roundsWon++;
                     }
@@ -1547,9 +1573,11 @@
         }
 
         function showFinalScore() {
+            const sorted = [...gameState.players].sort((a, b) => b.score - a.score);
             const winner = sorted[0];
             const maxPossible = 50000;
             const pct = (winner.score / maxPossible) * 100;
+            const isMulti = gameState.players.length > 1;
             const container = document.getElementById('ceremonyContent');
 
             // Save game + Elo (multi only)
@@ -1562,6 +1590,7 @@
                     scores: {}, roundScores: {}
                 };
                 gameState.players.forEach(p => { game.scores[p.id] = p.score; game.roundScores[p.id] = p.roundScores; });
+                const history = getGameHistory();
                 history.push(game);
                 saveGameHistory(history);
                 eloDeltas = applyEloFromGame(game);
@@ -1569,6 +1598,7 @@
             }
 
             // Generate highlights
+            const highlights = generateHighlights();
 
             // Stars count
             let starCount = 1;
@@ -1592,6 +1622,7 @@
                 const stepMap = sorted.length >= 3 ? [1, 0, 2] : [1, 0]; // index in sorted
 
                 podiumOrder.forEach((p, colIdx) => {
+                    const rank = sorted.length >= 3 ? steps[colIdx] : (colIdx === 1 ? '1' : '2');
                     html += `<div class="podium-col" id="podium-col-${colIdx}">
                         <div class="podium-player-info">
                             <div class="podium-emoji">${p.emoji}</div>
@@ -1703,12 +1734,14 @@
                 // 4th player
                 if (sorted.length >= 4) {
                     setTimeout(() => {
+                        const el = document.getElementById('podium4th');
                         if (el) el.classList.add('visible');
                     }, 400 + colOrder.length * 400);
                 }
             } else {
                 // Solo score animation
                 setTimeout(() => {
+                    const el = document.getElementById('soloScoreBig');
                     if (el) {
                         el.classList.add('visible');
                         animatePoints(el, sorted[0].score, 1200, '');
@@ -1725,6 +1758,7 @@
 
                 // Message
                 setTimeout(() => {
+                    const el = document.getElementById('soloMessage');
                     if (el) el.classList.add('visible');
                 }, 1200 + starCount * 200);
             }
@@ -1734,6 +1768,7 @@
             // Highlights
             highlights.forEach((_, i) => {
                 setTimeout(() => {
+                    const el = document.getElementById(`hl-${i}`);
                     if (el) el.classList.add('visible');
                 }, baseDelay + i * 250);
             });
@@ -1743,6 +1778,7 @@
             // Elo
             if (eloDeltas) {
                 setTimeout(() => {
+                    const el = document.getElementById('eloSection');
                     if (el) el.classList.add('visible');
                 }, afterHighlights);
             }
@@ -1751,12 +1787,14 @@
             setTimeout(() => {
                 const toggle = document.getElementById('breakdownToggle');
                 if (toggle) toggle.style.opacity = '1';
+                const btn = document.getElementById('ceremonyBtn');
                 if (btn) btn.classList.add('visible');
             }, afterHighlights + 400);
         }
 
         function toggleBreakdown() {
             const content = document.getElementById('breakdownContent');
+            const toggle = document.getElementById('breakdownToggle');
             content.classList.toggle('open');
             toggle.textContent = content.classList.contains('open') ? 'Masquer le détail ▴' : 'Voir le détail des manches ▾';
         }
@@ -1764,11 +1802,15 @@
         // ===================== RANKING SCREEN =====================
 
         function showRanking() {
+            const elo = getEloRatings();
+            const sorted = Object.keys(PROFILES).sort((a, b) => elo[b] - elo[a]);
+            const medals = ['🥇', '🥈', '🥉', ''];
 
             // Ranking table
             const table = document.getElementById('rankingTable');
             table.innerHTML = '<thead><tr><th>#</th><th>Joueur</th><th>Elo</th><th>Parties</th><th>Victoires</th><th>Moyenne</th><th>Meilleur</th></tr></thead><tbody>' +
                 sorted.map((id, i) => {
+                    const p = PROFILES[id]; const s = getPlayerStats(id);
                     return `<tr><td class="rank-medal">${medals[i] || (i+1)}</td><td style="color:${p.color}; font-weight:600;">${p.emoji} ${p.name}</td><td class="elo-val">${elo[id]}</td><td>${s.games}</td><td>${s.winRate}%</td><td>${s.avg || '-'}</td><td>${s.best || '-'}</td></tr>`;
                 }).join('') + '</tbody>';
 
@@ -1778,6 +1820,7 @@
             const ids = Object.keys(PROFILES);
             for (let i = 0; i < ids.length; i++) {
                 for (let j = i + 1; j < ids.length; j++) {
+                    const a = PROFILES[ids[i]], b = PROFILES[ids[j]];
                     const record = getH2H(ids[i], ids[j]);
                     h2h.innerHTML += `<div class="h2h-card"><div class="h2h-vs">${a.emoji} ${a.name.split(' ')[0]} vs ${b.emoji} ${b.name.split(' ')[0]}</div><div class="h2h-score" style="color: ${record.w1 > record.w2 ? a.color : record.w2 > record.w1 ? b.color : 'var(--text-dark)'};">${record.w1} - ${record.w2}</div><div class="h2h-detail">${record.draws} nul${record.draws > 1 ? 's' : ''} · ${record.total} partie${record.total > 1 ? 's' : ''}</div></div>`;
                 }
@@ -1785,11 +1828,15 @@
 
             // Recent games
             const rg = document.getElementById('recentGames');
+            const games = getGameHistory().slice(-8).reverse();
             if (games.length === 0) {
                 rg.innerHTML = '<div style="text-align: center; color: var(--sand); font-family: Source Sans 3, sans-serif; padding: 20px;">Aucune partie jouée</div>';
             } else {
                 rg.innerHTML = games.map(g => {
                     const date = new Date(g.date).toLocaleDateString('fr-FR');
+                    const sorted = g.players.sort((a, b) => g.scores[b] - g.scores[a]);
+                    const winner = PROFILES[sorted[0]];
+                    const detail = sorted.map(id => `${PROFILES[id].emoji} ${g.scores[id]}`).join('  ');
                     return `<div class="recent-game"><span>${date}</span><span>${detail}</span><span style="font-weight:600; color:${winner.color};">${winner.emoji} gagne</span></div>`;
                 }).join('');
             }
